--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Iris Light is a modern looking flat theme for Gtk. The theme is compatible with GTK 3.10. It also includes a GTK 2.0 theme using Murrine engine.
+Yellowstone Iris Light is a combination of the popular Iris Light theme for gnome-shell with a slight hint of the elementary OS theme, Yellowstone. The theme is compatible with GTK 3.10. It also includes a GTK 2.0 theme using Murrine engine.
 
 ---
 
